<resources>
    <string name="app_name">Truco</string>
    <string name="_1">+ 1</string>
    <string name="_3">+ 3</string>
    <string name="_6">+ 6</string>
    <string name="_9">+ 9</string>
    <string name="_12">+ 12</string>
    <string name="host_name">JOGADOR 1:</string>
    <string name="initial_points">0</string>
    <string name="visitor_name">JOGADOR 2:</string>
    <string name="manager_players">CONFIGURAR JOGADORES</string>
    <string name="games_history">HISTÓRICO DE JOGOS</string>
    <string name="history_of">HISTÓRICO DE </string>
    <string name="games"> JOGOS</string>
    <string name="number_of_victories">NÚMERO DE VITORIAS</string>
    <string name="back_button">VOLTAR</string>
    <string name="button_save">Salvar</string>
    <string name="reset_history">ZERAR HISTÓRICO</string>
    <string name="informe">INFORMAR</string>
    <string name="names">NOMES</string>
    <string name="marcador">MARCADOR</string>
    <string name="truco">TRUCO</string>
    <string name="reset_success">O histórico de partidas foi reiniciado com sucesso</string>
    <string name="loser_message">É ... nao deu %s</string>
    <string name="winner_message">O %s atingiu 12 pontos e venceu!</string>
    <string name="next_game">Bora pra próxima</string>
    <string name="default_player_1">Jogador 1</string>
    <string name="default_player_2">Jogador 2</string>
    <string name="double_zero">00</string>
</resources>